--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             <h1>Welcome to our graduation invite</h1>
             <p>We cordially invite you to our graduation</p>
             <div class="button">
-                <a href="wa.link_v7758f.png"><span></span>Scan for invite</a>
-                <a href="https://wa.link/v7758f"><span></span>DM for invite</a>
+                <a href="wa.link_g1p9an.png"><span></span>Scan for invite</a>
+                <a href="https://wa.link/g1p9an"><span></span>DM for invite</a>
             </div>
         </div>
     </section>
